<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.peoples.AddNewPeopleFragment"
    tools:ignore="UseSwitchCompatOrMaterialXml"
    tools:background="@drawable/backgroung_gradient_main">

    <EditText
        android:id="@+id/txtRoomNumNewMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/room_num"
        android:inputType="numberSigned|text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#99FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/txtNameNewMan"
        app:layout_constraintStart_toStartOf="@+id/txtNameNewMan"
        app:layout_constraintTop_toBottomOf="@+id/txtNameNewMan"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtNameNewMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#99FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtPlDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/date_from"
        android:inputType="date"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#99FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/txtRoomNumNewMan"
        app:layout_constraintStart_toStartOf="@+id/txtRoomNumNewMan"
        app:layout_constraintTop_toBottomOf="@+id/txtRoomNumNewMan"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtPlDateTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/date_to"
        android:inputType="date"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#99FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/txtPlDateFrom"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtPlDateFrom"
        app:layout_constraintTop_toBottomOf="@+id/txtPlDateFrom"
        tools:ignore="TextContrastCheck" />

    <Switch
        android:id="@+id/switchUsMan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:showText="true"
        android:text="@string/work_in_our_company"
        android:textColor="#DADADA"
        android:textOff="@string/n"
        android:textOn="@string/y"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/txtPlDateTo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtPlDateTo"
        app:layout_constraintTop_toBottomOf="@+id/txtPlDateTo"
        tools:checked="false"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/add_guest"
        android:textColor="#E3E3E3"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEdAddInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/info"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#99FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/switchUsMan"
        app:layout_constraintStart_toStartOf="@+id/switchUsMan"
        app:layout_constraintTop_toBottomOf="@+id/switchUsMan"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/txtEdAddInfo"
        app:layout_constraintStart_toStartOf="@+id/txtEdAddInfo"
        app:layout_constraintTop_toBottomOf="@+id/txtEdAddInfo">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@drawable/backgroung_button_orange"
            android:backgroundTintMode="add"
            android:padding="10dp"
            android:text="@string/delete"
            android:textColor="#B33030"
            android:textSize="12sp"
            android:visibility="gone"
            tools:ignore="ButtonStyle,TextContrastCheck"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@drawable/backgroung_button_orange"
            android:padding="10dp"
            android:text="@string/save"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>