<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/background_same_transparent"
    android:elevation="10dp">


    <LinearLayout
        android:id="@+id/bed_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="2dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingBottom="2dp"
        tools:layout_editor_absoluteX="2dp">

        <TextView
            android:id="@+id/txtRoomLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtRoomNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="5dp"
            android:text="@string/rand_room_num"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtManName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:elegantTextHeight="true"
            android:text="@string/rand_name_1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtDelayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delay"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtDelayDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5sp"
            android:paddingEnd="5sp"
            android:text="@string/rand_room_num"
            android:textAlignment="textEnd"
            android:textColor="@color/overdue_payment"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtDayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textAlignment="textEnd"
            android:textColor="@color/overdue_payment"
            android:textSize="10sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtDateTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/rand_date"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
