<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/background_same_transparent"
    android:elevation="10dp"
    tools:background="@color/black">

    <LinearLayout
        android:id="@+id/mainLinLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtRoomNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rand_room_num"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/bed_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:background="@drawable/background_elements_same_transparent"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/txtBedNum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:breakStrategy="high_quality"
                android:gravity="start|center_vertical"
                android:text="@string/bed_num_1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtManOnBed1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:elegantTextHeight="true"
                android:text="@string/rand_name_1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtFromBed1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/rand_date"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtToBed1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0"
                android:text="@string/rand_date"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bed_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:background="@drawable/background_elements_same_transparent"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/txtBedNum2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:breakStrategy="high_quality"
                android:gravity="start|center_vertical"
                android:text="@string/bed_num_2"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtManOnBed2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:elegantTextHeight="true"
                android:text="@string/rand_name_2"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtFromBed2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/rand_date"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtToBed2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0"
                android:text="@string/rand_date"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bed_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:background="@drawable/background_elements_same_transparent"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/txtBedNum3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:breakStrategy="high_quality"
                android:gravity="start|center_vertical"
                android:text="@string/bed_num_3"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtManOnBed3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:elegantTextHeight="true"
                android:text="@string/rand_name_3"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtFromBed3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/rand_date"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtToBed3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0"
                android:text="@string/rand_date"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bed_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:background="@drawable/background_elements_same_transparent"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/txtBedNum4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:breakStrategy="high_quality"
                android:gravity="start|center_vertical"
                android:text="@string/bed_num_4"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtManOnBed4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:elegantTextHeight="true"
                android:text="@string/rand_name_4"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtFromBed4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/rand_date"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtToBed4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="0"
                android:text="@string/rand_date"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>